<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Team Blue Jay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="donald">Donald</string>
    <string name="Player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="start_game">Start Game</string>
    <string name="help">Help</string>
    <string name="title_activity_game_acticity">GameActicity</string>
    <string name="title_activity_selection">SelectionActivity</string>
    <string name="title_activity_help_page">help_page</string>
    <string name="Help">Type in your name, then hit start to start the game.</string>
    <string name="HelpTitle">Help</string>
    <string name="bird_1">Bird 1</string>
    <string name="selectpicture">Bird to select</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="select">Select</string>
    <string name="title_activity_final_score">FinalScore</string>
    <string name="player_2_wins">PLAYER 2 WINS!</string>
    <string name="player_1_wins">PLAYER 1 WINS!</string>
    <string name="player_1_score">0</string>
    <string name="tie_game">TIE GAME</string>
    <string name="player_1_score_string">Player 1 score: </string>
    <string name="player_2_score_string">Player 2 score:</string>
    <string name="player_2_score">1</string>
    <string name="menu">Menu</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="Confirm">Confirm</string>
    <string name="birddescription">game play area</string>
    <string name="player_1_name">Player 1</string>
    <string name="player_2_name">Player 2</string>
</resources>
