<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.msu.liyimin2.project1.SelectionActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Player_1"
        android:id="@+id/playerIndicator"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/birdImage"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/parrot"
        android:contentDescription="@string/selectpicture"
        android:layout_weight="3" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            android:id="@+id/prevButton"
            android:layout_alignParentLeft="true"
             />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:id="@+id/selectButton"
            android:layout_centerHorizontal="true" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/nextButton"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>
