<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/DonaldDuck"
        android:src="@drawable/donald"
        android:contentDescription="@string/donald"
        android:layout_weight="7"
        android:layout_marginTop="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:id="@+id/Players">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/Player_1"
            android:maxLength="10"
            android:maxLines="1"
            android:layout_toLeftOf="@+id/empty_frame_1"
            android:layout_marginLeft="20dp"
            android:inputType="text"
            android:imeOptions="actionNext"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_2"
            android:hint="@string/player_2"
            android:maxLength="10"
            android:maxLines="1"
            android:layout_toRightOf="@+id/empty_frame_1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:imeOptions="actionDone"/>

        <FrameLayout
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/player_1"
            android:id="@+id/empty_frame_1"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <FrameLayout
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/empty_frame_2"
            android:layout_alignTop="@+id/startButton"
            android:layout_centerInParent="true"></FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:id="@+id/startButton"
            android:layout_gravity="left|center_vertical"
            android:gravity="center"
            android:onClick="onStartGame"
            android:layout_toLeftOf="@+id/empty_frame_2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:id="@+id/helpButton"
            android:layout_gravity="right|center_vertical"
            android:gravity="center"
            android:onClick="onHelp"
            android:layout_toRightOf="@+id/empty_frame_2" />
    </RelativeLayout>

</LinearLayout>